--- a/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj.filters
+++ b/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="prepShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Week14-1-BlendingDemo.cpp">
+    <ClCompile Include="GAME2012_Final_KongWoonhak.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Maze.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Maze.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
