MazeShape class is implemented for making maze

--- a/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj.filters
+++ b/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Maze.cpp">
+    <ClCompile Include="MazeShape.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,7 +44,7 @@
     <ClInclude Include="Shape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Maze.h">
+    <ClInclude Include="MazeShape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
